lib/stratiform/res/test/stratiform/corpus/pos/free-standing-comment.tel
hello

# This comment is free-standing

world
