lib/stratiform/res/test/stratiform/corpus/neg/e109-comment-without-blank-line.tel
hello
# This comment follows a peer compound directly
world
